fix: accordion item borders and spacing

--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -1,5 +1,11 @@
+main .accordion.block {
+  padding-bottom: 4rem;
+}
+
 main .accordion .accordion-item {
-  margin-bottom: 24px;
+  margin: 0 2rem;
+  padding-top: 1rem;
+  border-top: 2px solid var(--color-bg-warmgray-10);
 }
 
 main .accordion .accordion-item:last-child {
@@ -20,17 +26,16 @@ main .accordion .accordion-item > :is(h2, h3) > .accordion-trigger {
   margin: 0;
   font-size: var(--heading-font-size-m);
   font-weight: 700;
-
+  padding-bottom: 0;
   /* color: var(--headline-color); */
-  color: darkblue;
+  color: var(--color-brandblue-500);
   line-height: 28px;
-  padding: 8px 24px;
-  border-radius: 8px;
-  background-color: var(--clr-off-white);
+  background-color: var(--color-white);
   text-align: left;
   position: relative;
-  border: none; 
+  border: none;
   white-space: unset;
+  padding-top: 1rem;
 }
 
 main .accordion .accordion-item > :is(h2, h3) > .accordion-trigger .accordion-title {
